Table langue {
  id int [pk, increment]
  nom varchar(100) [not null]
}

Table category {
  id int [pk, increment]
  nom varchar(100) [not null]
}

Table produit {
  id int [pk, increment]
  prix double [not null]
  stock int [not null, default: 0]
  image json
  category_id int [not null]
  date_ajout timestamp [not null, default: `current_timestamp`]
  date_modif timestamp [not null, default: `current_timestamp`]

  indexes {
    category_id
  }
}

Table product_translation {
  id int [pk, increment]
  product_id int [not null]
  nom varchar(255) [not null]
  description text
  caracteristique text
  langue_id int [not null]

  indexes {
    product_id
    langue_id
    (product_id, langue_id) [unique]
  }
}

Table method_paiement {
  id int [pk, increment]
  category varchar(100) [not null]
}

Table adresse_facturation {
  id_adresse int [pk, increment]
  id_user int
  nom varchar(100)
  prenom varchar(100)
  adresse1 varchar(255)
  adresse2 varchar(255)
  telephone varchar(30)
  code_postal varchar(20)
  ville varchar(100)
  region varchar(100)

  indexes {
    id_user
  }
}

Table utilisateur {
  id int [pk, increment]
  nom varchar(100) [not null]
  prenom varchar(100) [not null]
  mail varchar(150) [not null, unique]
  mot_de_passe text [not null]
  id_adresse int
  achat_list int
  methode_paiement_id int

  indexes {
    id_adresse
    achat_list
    methode_paiement_id
  }
}

Table achat {
  id_achat int [pk, increment]
  id_user int [not null]
  date timestamp [not null, default: `current_timestamp`]
  id_produit int
  methode_paiement int
  sum_price_achat decimal(12,2)

  indexes {
    id_user
    id_produit
    methode_paiement
  }
}

Table product_quantity {
  id_achat int [not null]
  id_produit int [not null]
  quantity int [not null, default: 1]
  sum_price float
  statut_commande varchar(100)

  indexes {
    (id_achat, id_produit) [pk]
    id_produit
  }
}

Ref: produit.category_id > category.id
Ref: product_translation.product_id > produit.id
Ref: product_translation.langue_id > langue.id

Ref: adresse_facturation.id_user > utilisateur.id
Ref: utilisateur.id_adresse > adresse_facturation.id_adresse
Ref: utilisateur.methode_paiement_id > method_paiement.id
Ref: utilisateur.achat_list > achat.id_achat

Ref: achat.id_user > utilisateur.id
Ref: achat.id_produit > produit.id
Ref: achat.methode_paiement > method_paiement.id

Ref: product_quantity.id_achat > achat.id_achat
Ref: product_quantity.id_produit > produit.id
